<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNOTES2"
    tools:context=".InfoActivity" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|center_horizontal"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="50sp"
            android:textStyle="bold"
            android:shadowRadius="10"
            android:shadowColor="#606060" />
        <ImageView
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/thenotes"
            android:alpha=".5"
            android:rotation="25"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-370dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical"
            android:gravity="center"
            android:alpha=".8"
            android:background="@drawable/back_note_card" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_description"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="20sp"
                android:shadowRadius="2"
                android:shadowColor="@color/graffit"
                tools:ignore="HardcodedText" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autor"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:shadowRadius="3"
                android:shadowColor="@color/graffit"
                tools:ignore="HardcodedText" />
            <TextView
                android:id="@+id/txvmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gmail TheNotes"
                android:textAlignment="center"
                android:background="@drawable/back_note_card"
                android:paddingHorizontal="50dp"
                android:paddingVertical="5dp"
                android:elevation="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="60dp"
                android:textSize="18sp"
                android:shadowRadius="2"
                android:shadowColor="@color/graffit"
                tools:ignore="HardcodedText" />
            <TextView
                android:id="@+id/txvgit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="GitHub TheNotes"
                android:textAlignment="center"
                android:background="@drawable/back_note_card"
                android:paddingHorizontal="50dp"
                android:paddingVertical="5dp"
                android:elevation="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="60dp"
                android:textSize="18sp"
                android:shadowRadius="2"
                android:shadowColor="@color/graffit"
                tools:ignore="HardcodedText" />
            <TextView
                android:id="@+id/txvplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Google-PlayStore"
                android:textAlignment="center"
                android:background="@drawable/back_note_card"
                android:paddingHorizontal="50dp"
                android:paddingVertical="5dp"
                android:elevation="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="60dp"
                android:textSize="18sp"
                android:shadowRadius="2"
                android:shadowColor="@color/graffit"
                tools:ignore="HardcodedText" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/co_autor"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:shadowRadius="3"
                android:shadowColor="@color/graffit"
                tools:ignore="HardcodedText" />
            <TextView
                android:id="@+id/contrib"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="GitHub Tk0082"
                android:textAlignment="center"
                android:background="@drawable/back_note_card"
                android:paddingHorizontal="50dp"
                android:paddingVertical="5dp"
                android:elevation="2dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="80dp"
                android:textSize="18sp"
                android:shadowRadius="2"
                android:shadowColor="@color/graffit"
                tools:ignore="HardcodedText" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>