<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimaryVariant"
    android:layout_alignParentBottom="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    tools:context=".NotesTakerActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_notes"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_marginEnd="16dp">
            <EditText
                android:id="@+id/editText_title"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_margin="3dp"
                android:layout_toStartOf="@id/bck_btn"
                android:background="@drawable/back_tx_title"
                android:elevation="3dp"
                android:ems="10"
                android:focusedByDefault="true"
                android:hint="@string/hint_titulo"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:nextFocusRight="@id/editText_notes"
                android:nextFocusDown="@id/editText_notes"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="?android:attr/textColorPrimary"
                android:textColorHint="?android:attr/textColorHint"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="Autofill,HardcodedText,TextFields,UnusedAttribute,TextContrastCheck,VisualLintTextFieldSize" />
            <RelativeLayout
                android:id="@+id/bck_btn"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:gravity="center"
                android:layout_margin="3dp"
                android:elevation="2dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/back_btn"
                android:layout_marginHorizontal="15dp"  >
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/imageView_save"
                    android:layout_marginStart="12dp"
                    android:text="@string/btn_salvar"
                    android:textColor="@color/graffit"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    tools:ignore="HardcodedText"/>
                <ImageView
                    android:id="@+id/imageView_save"
                    android:layout_width="45dp"
                    android:layout_height="42dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="6dp"
                    android:layout_marginVertical="6dp"
                    android:paddingBottom="3dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/thenotes" tools:ignore="ContentDescription"/>
            </RelativeLayout>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <EditText
        android:id="@+id/editText_notes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="8dp"
        android:layout_weight="1"
        android:background="@drawable/back_tx_note"
        android:elevation="3dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_nota"
        android:imeOptions="normal"
        android:inputType="textMultiLine|textImeMultiLine"
        android:paddingHorizontal="6dp"
        android:paddingVertical="10dp"
        android:scrollbarSize="2dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical|horizontal"
        android:fadeScrollbars="true"
        android:textAlignment="textStart"
        android:textColor="?android:attr/textColorPrimary"
        android:textColorHint="?android:attr/textColorHint"
        android:textSize="16sp"
        android:textStyle="normal"
        tools:ignore="Autofill,HardcodedText,TextFields,TextContrastCheck,VisualLintTextFieldSize" />
</LinearLayout>